--- a/src/lang/ab.json
+++ b/src/lang/ab.json
@@ -2,6 +2,6 @@
     "app.header": "أهلا بك Boca code",
     "app.subhead": "كن مهندس برمجيات معتمدًا في غضون 10 أسابيع ",
     "app.cta": "قدم الآن",
-    "details.header": "",
+    "details.header": "برنامج خارج الخط",
     "details.text": "ستعلمك هذه الدورة التدريبية جميع المهارات المادية والناجحة للحصول على مهنة ناجحة في مجال التكنولوجيا"
 }
