--- a/src/lang/ab.json
+++ b/src/lang/ab.json
@@ -1,7 +1,7 @@
 {
-    "app.header": "أهلا بك Boca code",
+    "app.header": "مرحبا بكم في Boca code",
     "app.subhead": "كن مهندس برمجيات معتمدًا في غضون 10 أسابيع ",
     "app.cta": "قدم الآن",
-    "details.header": "برنامج خارج الخط",
-    "details.text": "ستعلمك هذه الدورة التدريبية جميع المهارات المادية والناجحة للحصول على مهنة ناجحة في مجال التكنولوجيا"
+    "details.header": "مخطط البرنامج",
+    "details.text": "ستعلمك هذه الدورة جميع المهارات الأساسية واللينة للحصول على حياة مهنية ناجحة في مجال التكنولوجيا"
 }
